<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Login</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="or">OR</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome</string>
    <string name="welcomeText">shoe store will help you to discover a modern collections of shoes with Discount over than 50% and offers on new collection or used stuff.</string>
    <string name="next">Next</string>
    <string name="instruction_title">Instruction</string>
    <string name="instruction">When use our application follow every step to reach to your goal with the easiest way, order may take between 3 to 5 days shipping, we wish you get a good service.</string>
    <string name="goToShoeList">Move to shoe list now</string>
    <string name="ShoeDetails">Shoe Details</string>

    <string name="ShoeName">Shoe Name</string>
    <string name="company">Shoe Company</string>
    <string name="ShoeSize">Shoe Size</string>
    <string name="ShoeDescription">Shoe Description</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log out</string>

</resources>
